# Krita-Mixing-Brush

./: CMakeLists.txt  README  kis_minimal_paintop.cpp  kis_minimal_paintop.h  kis_minimal_paintop_options.cpp  kis_minimal_paintop_options.h  kis_minimal_paintop_settings.cpp  kis_minimal_paintop_settings.h  kis_minimal_paintop_settings_widget.cpp  kis_minimal_paintop_settings_widget.h  kis_mixing_paintop.cpp  kis_mixing_paintop.cpp~  kis_mixing_paintop.h  kis_mixing_paintop.h~  kis_mixing_paintop_options.cpp  kis_mixing_paintop_options.h  kis_mixing_paintop_settings.cpp  kis_mixing_paintop_settings.h  kis_mixing_paintop_settings_widget.cpp  kis_mixing_paintop_settings_widget.h  kis_mixingop_option.cpp  kis_mixingop_option.h  krita_mixing_paintop.cpp  krita_mixing_paintop.h  krita_mixing_paintop_settings.cpp  krita_mixing_paintop_settings.h  krita_mixing_paintop_settings_widget.cpp  krita_mixing_paintop_settings_widget.h  krita_mixingop_option.cpp  krita_mixingop_option.h  kritaminimalpaintop.desktop  kritamixingpaintop.desktop  minimal_paintop_plugin.cpp  minimal_paintop_plugin.h  mixing_brush.cpp  mixing_brush.h  mixing_paintop_plugin.cpp  mixing_paintop_plugin.h  wdgminimaloptions.ui  wdgmixingoptions.ui
